# kleisli-compose

./: README.md  pyproject.toml  talk.md
.github/workflows/: test.yml
examples/: 000.py  001.py  002.py  003.py  004.py  005.py
kleisli_compose/: __init__.py  base.py  bettercatcher.py  catcher.py  fancy.py  full.py  landing.py  mocks.py
