[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kleisli-compose"
version = "0.1.0"
description = "Introduction to monads"
readme = "README.md"
authors = [{ name = "Simone Basso", email = "bassosimone@gmail.com" }]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = []
requires-python = ">=3.12.0"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.397", "ruff>=0.11.0"]

[project.urls]
Homepage = "https://github.com/bassosimone/kleisli-compose"

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
extend-select = ["W", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
